--- a/Practica_1/css/main.css
+++ b/Practica_1/css/main.css
@@ -9,6 +9,7 @@ body {
     line-height: 32px;
     font-family:Ubuntu,sans-serif;
     color:#3d443d;
+    background-color:rgb(123, 173, 154)
 }
 
 h1 {
